<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="60dp"
    android:background="@color/topic_background">

    <Button
        android:id="@+id/topic_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_topic_one"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="30dp"
        android:textColor="@color/topic_foreground"
        android:textStyle="bold"
        android:background="@drawable/command_btn_selector_background_style" />

    <Button
        android:id="@+id/topic_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_topic_two"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="30dp"
        android:textColor="@color/topic_foreground"
        android:textStyle="bold"
        android:background="@drawable/command_btn_selector_background_style" />

    <Button
        android:id="@+id/topic_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_topic_three"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="30dp"
        android:textColor="@color/topic_foreground"
        android:textStyle="bold"
        android:background="@drawable/command_btn_selector_background_style" />
</LinearLayout>
